--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.css
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.css
@@ -1,201 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
 
-#icons {
-  text-align: center;
-  color: whitesmoke;
-}
-
-.icon {
-  color: whitesmoke;
-}
-
-#iconscontainer {
-  width: 20%;
-  padding-top: 3vmin;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-p {
-  color: rgb(0, 0, 0);
-  background: rgba(245, 245, 245, 0.2);
-  padding: 2vmin 3vmin;
-  border-radius: 5vmin;
-  text-align: justify;
-  font-size: 1.1rem;
-}
-
-h1 {
-  color: rgb(0, 0, 0);
-  font-size: 5vmin;
-  font-weight: lighter;
-}
-
-.col-sm {
-  margin-top: 1vmin;
-  margin-bottom: 1vmin;
-  text-align: center;
-}
-
-.example-card {
-  margin-bottom: 15px;
-  display:grid;
-  grid-template-rows: 1fr auto;
-}
-.example-card mat-card-actions {
-  text-align: center;
-}
-
-.card-content {
-  text-align: justify;
-  font-size: 1.2em;
-}
-
-
-.example-header-image {
-  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png');
-  background-size: cover;
-}
-
-
-.topbottomLine {
-  padding-top: 2vmin;
-  padding-bottom: 2vmin;
-  border-top: var(--bs-ieee-bright-blue) 2px solid;
-  border-bottom: var(--bs-ieee-bright-blue) 2px solid;
-  vertical-align: middle;
-  align-content: center;
-}
-
-.hover-card:hover {
-  background-color: rgba(13, 71, 161, 0.8);
-  color: white;
-}
-
-
-@media (max-width: 700px) {
-  .topbottomLine {
-    padding-top: 30%;
-  }
-
-}
-
-
-.transparentButton {
-  padding: 2vmin;
-  border: solid 2px whitesmoke;
-  border-radius: 5vmin;
-  color: whitesmoke;
-  background-color: transparent;
-  transition: all .5s ease;
-}
-
-.whitse-text:hover{
-  color:white;
-}
-
-.white-text{
-  color:black;
-}
-
-.transparentButton:hover {
-  background-color: whitesmoke;
-  color: black;
-}
-
-#homeText { display: inline; }
-
-#titleBar h1 {
-  color: rgb(0, 0, 0);
-  vertical-align: middle;
-  margin-left: auto;
-  padding-left: 1vmin;
-  text-align: right;
-}
-
-#titleBar {
-  padding-left: 1vmin;
-  padding-right: 2vmin;
-  display: flex;
-  flex-direction: row;
-}
-
-.halfRight {
-  padding: 1vmin;
-  margin: 1vmin;
-  float: right;
-  width: 45%;
-}
-
-.halfLeft {
-  padding: 1vmin;
-  margin: 1vmin;
-  float: left;
-  width: 45%;
-}
-
-.marginTop {
-  margin-top: 30px;
-}
-
-.division{
-  width:100%;
-}
-
-mdb-card {
-  border-radius: 5vmin;
-  margin-top: 1vmin;
-  margin-bottom: 1vmin;
-}
-
-h2{
-  font-size: 3vmin;
-  margin-left: 20px;
-  text-align: left;
-  color: black;
-}
-
-#anotate {
-  margin-top: 4vmin;
-  border-radius: 5vmin;
-  align-content: center;
-  border: solid whitesmoke 2px;
-}
-
-#anotateButton {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-bottom: 2vmin;
-}
-
-footer {
-  position: relative;
-  bottom: 10%;
-  align-content: center;
-  background: rgb(10,27,103);
-  background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
-  background-size: cover;
-  max-width: 100%;
-}
-
-h3{
-  margin-left: 20px;
-  color: black;
-}
-
-.col-sm {
-  text-align: center;
-  padding-top: auto;
-  vertical-align: middle;
-}
-
-img {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
 /* Flex */
 /*
 @media (max-width: 1000px) {
@@ -204,27 +8,6 @@ img {
     }
 }
 */
-@media (max-width: 600px) {
-  #homeText { display: none; }
-  #homebutton { height: 10vmin; }
-  .halfLeft {
-    display: inline-block;
-    width: 100% !important;
-    margin-left: auto;
-  }
-  .halfRight {
-    display: inline-block;
-    width: 100% !important;
-    margin-left: auto;
-  }
-  #anotate {
-    width: 100%;
-  }
-  html {
-    min-height:350%;
-  }
-
-}
 
 .disabled-goback-button {
   font-size: calc(0.5vw + 0.5rem);
@@ -267,83 +50,6 @@ img {
   color: white !important;
 }
 
-.divid{
-  all: unset;
-}
-
-.course-title {
-  font-size: 2rem;
-  font-weight: 400;
-  color: var(--bs-ieee-bright-blue-80);
-  letter-spacing: 1px;
-}
-.course-subtitle {
-  font-size: 1.5rem;
-  color: var(--bs-ieee-bright-blue);
-  font-weight: 600;
-  margin-top: 0.5rem;
-}
-
-.no-shadow {
-  box-shadow: none !important;
-}
-
-.faq-section {
-  margin-top: 3rem;
-  margin-bottom: 4rem;
-}
-
-.faq-accordion {
-  margin-top: 1.5rem;
-}
-.faq-panel {
-  height:max-content;
-}
-.faq-question {
-  font-size: 1rem;
-}
-.faq-answer {
-  font-size: larger;
-}
-
-/** tomado de team component css */
-
-::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active {
-  color:rgb(23, 46, 148);
-  background-color: transparent;
-}
-
-::ng-deep .mat-ink-bar {
-  background-color: var(--primary-color,whitesmoke) !important;
-}
-
-::ng-deep .mat-expansion-indicator::after {
-  color:var(--bs-ieee-bright-blue);
-}
-
-mat-panel-description {
-  text-align: right;
-}
-
-mat-expansion-panel {
-  background-color: transparent;
-  margin-top: 1.5vmin;
-}
-
-mat-expansion-panel-header {
-  border: var(--bs-ieee-bright-blue) 1px solid;
-  border-radius: 5vmin;
-}
-
-mat-panel-title {
-  color:var(--bs-ieee-bright-blue);
-}
-
-.mat-list .mat-list-item {
-  height: 50px; /* default is 72px */
-}
-
-
 .ieeecard-button {
   font-size: 1.2em;
   padding: 0.4em 0.7em;
@@ -373,7 +79,11 @@ color: gray !important;
 .schedule-cards {
   display: flex;
   justify-content: space-evenly;
-  flex-wrap: wrap;
+  margin-bottom: 4rem;
+}
+
+.schedule-cards > app-event-content-card {
+  flex-grow: 1;
 }
 
 @media (max-width: 770px) {
