--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -1,13 +1,7 @@
-<div class="main-container">
-  <div class="topbottomLine" id="home" style="margin-bottom:2%">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          <h1 id="logotext" class="course-title">{{ 'DATAANALYSIS.TITLE' | translate }}</h1>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="main-container event">
+  <app-event-title>
+    {{ 'DATAANALYSIS.TITLE' | translate }}
+  </app-event-title>
 
   <div *ngIf="enrollAvailable()">
     <div class="d-flex flex-row-reverse">
@@ -33,79 +27,57 @@
   </div>
 
   <!-- Introductory text -->
-  <br>
-  <div>
-    <h2 class="course-subtitle">{{ 'DATAANALYSIS.DESC_TITLE' | translate }}</h2>
-    <p>{{ 'DATAANALYSIS.DESC' | translate }}</p>
-    <h2 class="course-subtitle">{{ 'DATAANALYSIS.FORMAT_SUBTITLE' | translate }}</h2>
-    <p>{{ 'DATAANALYSIS.FORMAT' | translate }}</p>
-  </div>
+  <app-event-section
+  title="{{ 'DATAANALYSIS.DESC_TITLE' | translate }}"
+  >
+  <p>{{ 'DATAANALYSIS.DESC' | translate }}</p>
+  </app-event-section>
+  <app-event-section
+  title="{{ 'DATAANALYSIS.FORMAT_SUBTITLE' | translate }}"
+  >
+  <p>{{ 'DATAANALYSIS.FORMAT' | translate }}</p>
+  </app-event-section>
 
   <!-- Cards Temario -->
 
   <div class="schedule-cards">
       <ng-container *ngFor="let courseClass of courseData.courseClasses, let i=index">
-            <mat-card class="example-card" [ngClass]="{'not-available-background-color':!isOldDate(courseClass.openDate)}"
-                      fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%">
-                <mat-card-header>
-                    <div mat-card-avatar class="example-header-image"></div>
-                    <mat-card-title>
-                      <b>{{'DATAANALYSIS.CLASSES.TITLE' | translate }} {{i+1}}</b>
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content class="flex-grow-1 overflow-auto mb-1">
-                    <span class="card-content">
-                        {{ courseClass.description | translate }}
-                    </span>
-                </mat-card-content>
-                <mat-card-actions class="flex-wrap justify-content-center gap-1">
-                    <a [href]="weekContentOpen(i) ? courseClass.content : ''"
-                       (click)="check($event, weekContentOpen(i))"
-                       [class.disabled]="!weekContentOpen(i) ? true : null"
-                    >
-                        <button mat-raised-button class="ieeecard-button me-3" [disabled]="!weekContentOpen(i)">
-                            {{ 'DATAANALYSIS.CONTENTBUTTON' | translate }}
-                        </button>
-                    </a>
-                    <a [href]="weekContentOpen(i+1) ? courseClass.solutions : ''"
-                       (click)="check($event, weekContentOpen(i+1))"
-                       [class.disabled]="!weekContentOpen(i+1) ? true : null"
-                    >
-                        <button mat-raised-button class="ieeecard-button me-3" [disabled]="!weekContentOpen(i+1)">
-                            {{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}
-                        </button>
-                    </a>
-                </mat-card-actions>
-            </mat-card>
+            <app-event-content-card title="{{'DATAANALYSIS.CLASSES.TITLE' | translate }} {{i+1}}"
+              [imageUrl]="pythonUrl"
+            >
+              <div content>
+                {{ courseClass.description | translate }}
+              </div>
+              <mat-card-actions actions class="flex-wrap justify-content-center gap-1">
+                <a [href]="weekContentOpen(i) ? courseClass.content : ''"
+                   (click)="check($event, weekContentOpen(i))"
+                   [class.disabled]="!weekContentOpen(i) ? true : null"
+                >
+                    <button mat-raised-button class="ieeecard-button me-3" [disabled]="!weekContentOpen(i)">
+                        {{ 'DATAANALYSIS.CONTENTBUTTON' | translate }}
+                    </button>
+                </a>
+                <a [href]="weekContentOpen(i+1) ? courseClass.solutions : ''"
+                   (click)="check($event, weekContentOpen(i+1))"
+                   [class.disabled]="!weekContentOpen(i+1) ? true : null"
+                >
+                    <button mat-raised-button class="ieeecard-button me-3" [disabled]="!weekContentOpen(i+1)">
+                        {{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}
+                    </button>
+                </a>
+            </mat-card-actions>
+            </app-event-content-card>
       </ng-container>
   </div>
 
-  <div class="faq-section">
-    <h2 class="course-subtitle">{{ 'DATAANALYSIS.FAQ.TITLE' | translate}}</h2>
-    <mat-accordion class="faq-accordion">
-
-      <mat-expansion-panel class="mat-elevation-z0" *ngFor="let question of ('DATAANALYSIS.FAQ.QUESTIONS' | translate)">
-        <mat-expansion-panel-header [collapsedHeight]="'max-content'" [expandedHeight]="'max-content'">
-          <mat-panel-title class="faq-question my-2">
-            {{ question.QUESTION }}
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <p class="faq-answer">{{ question.ANSWER }}</p>
-      </mat-expansion-panel>
-
-    </mat-accordion>
-  </div>
+  <app-event-section title="{{ 'DATAANALYSIS.FAQ.TITLE' | translate}}">
+    <app-event-faq-accordion [faq]="faq">
+    </app-event-faq-accordion>
+  </app-event-section>
 
   <!-- Sponsors Actuales -->
-  <div class="bottomLine mt-4">
-    <div class="row">
-      <h1 class="course-subtitle">Sponsors</h1>
+  <app-event-section title="Sponsors">
+    <app-sponsor-component content [currentsponsor]="sponsorsServiceVar.getCurrentSponsors()"></app-sponsor-component>
+  </app-event-section>
 
-      <br>
-
-      <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getCurrentSponsors()"></app-sponsor-component>
-    </div>
-
-  </div>
 </div>
