--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <app-navbar [bgColor]="getNavbarColor() | async"></app-navbar>
+  <app-navbar [navbarColors]="getNavbarColor() | async"></app-navbar>
 </header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
