--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,108 +1,95 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-nav navbar-expand-xl navbar-dark" id="nav" [style.background-color]="bgColor" mdbStickyHeader>
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark" [containerInside]="true" [style.background-color]="navbarColors.background" mdbStickyHeader>
+
   <!-- Navbar brand -->
-  <mdb-navbar-brand><a class="navbar-brand" [routerLink]="['']"><img
+  <mdb-navbar-brand class="mx-4">
+    <a class="navbar-brand" [routerLink]="['']">
+      <img
         src="../../../../assets/image/general-icons/IEEE-Logo-No-Text-Darkest.png" height="60vmin"
-        alt="Icon IEEE-ITBA"></a>
+        alt="Icon IEEE-ITBA">
+    </a>
   </mdb-navbar-brand>
 
-  <!-- All Items -->
-  <links id="myNavItems" class="navItems">
-    <!-- Menu -->
-    <ul class="navbar-nav">
-      <li class="nav-item m-auto">
-        <button [routerLink]="['/about-us']" class="buttonNavbar" type="button">
-          {{ 'NAVBAR.ABOUTUS' | translate }}
-        </button>
-      </li>
-      <li class="nav-item m-auto">
-        <button [routerLink]="['/noticias']" class="buttonNavbar" type="button">
-          {{ 'NAVBAR.NEWS' | translate }}
-        </button>
-      </li>
-      <li class="nav-item m-auto">
-        <button [routerLink]="['/events']" class="buttonNavbar" type="button">
-          {{ 'NAVBAR.EVENTS' | translate }}
-        </button>
-      </li>
-      <li class="nav-item m-auto">
-        <button [routerLink]="['/sponsors']" class="buttonNavbar" type="button">
-          {{ 'NAVBAR.SPONSORS' | translate }}
-        </button>
-      </li>
-      <li class="nav-item m-auto">
-        <button class="buttonNavbar dropdown-toggle" type="button" [matMenuTriggerFor]="institutionalMenu">
-          {{ 'NAVBAR.INSTITUTIONAL' | translate }}
-        </button>
-      </li>
-      <li class="nav-item m-auto">
-        <button [routerLink]="['/contact']" class="buttonNavbar" type="button">
-          {{ 'NAVBAR.CONTACT' | translate }}
-        </button>
-      </li>
-      <li class="nav-item m-auto" *ngIf="journalist">
-        <button [routerLink]="['/write-news']" class="buttonNavbar" type="button">
-          {{ 'WRITE-NEW.TITLE' | translate }}
-        </button>
-      </li>
-    </ul>
+  <!-- Collapsible content -->
+  <links>
 
-    <!-- Icons on right -->
-    <ul class="navbar-nav nav-last d-flex flex-row justify-content-center align-content-center">
-      <li class="nav-item">
-        <a href="https://www.linkedin.com/company/ieee-itba" class="nav-link custom-nav-icon">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="https://www.instagram.com/ieee.itba/" class="nav-link custom-nav-icon">
-          <i class="fab fa-instagram"></i>
-        </a>
-      </li>
-      <!-- Language toggle button -->
-      <li class="nav-item">
-        <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
+    <!-- Links -->
+      <ul class="navbar-nav d-flex flex-grow-1 justify-content-center">
+        <li class="nav-item active mx-5 d-flex align-items-center justify-content-center">
+          <div [routerLink]="['/noticias']" class="animated-text waves-light justify-content-center d-flex flex-fill flex-column hover-effect">
+            <span style="font-size: medium" class="text-center padding-below-lg">{{ 'NAVBAR.NEWS' | translate }}</span>
+            <div class="underline d-none d-lg-block"></div>
+            <div class="underline-inanimated d-lg-none"></div>
+          </div>
+        </li>
+        <li class="nav-item active mx-5 d-flex align-items-center justify-content-center">
+          <div class="animated-text waves-light justify-content-center d-flex flex-fill flex-column hover-effect" mdbWavesEffect [routerLink]="['/events']">
+            <span style="font-size: medium" class="text-center padding-below-lg">{{ 'NAVBAR.EVENTS' | translate }}</span>
+            <div class="underline d-none d-lg-block"></div>
+            <div class="underline-inanimated d-lg-none"></div>
+          </div>
+        </li>
+
+        <!-- Dropdown -->
+        <li class="nav-item dropdown-center mx-5 d-flex flex-column align-items-center justify-content-center" mdbDropdown>
+          <div mdbDropdownToggle type="button" class="dropdown-toggle waves-light d-flex flex-fill align-items-center justify-content-center text-white hover-effect"
+               style="width: 100%" mdbWavesEffect>
+              <span class="animated-text padding-below-lg">
+              <span style="font-size: medium" class="text-center padding-below-lg">{{ 'NAVBAR.INSTITUTIONAL' | translate }}</span>
+              <div class="underline d-none d-lg-block"></div>
+            </span>
+          </div>
+          <div class="underline-inanimated d-lg-none"></div>
+          <div *mdbDropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary my-1" role="menu">
+            <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/team']">{{ 'NAVBAR.TEAM' | translate }}</a>
+            <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/ras']">RAS</a>
+            <a class="dropdown-item waves-light" mdbWavesEffect href="https://csitba.web.app/">CS</a>
+            <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/wie']">WIE</a>
+            <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/emb']">EMB</a>
+          </div>
+        </li>
+
+      </ul>
+
+    <ul class="navbar-nav nav-last ms-auto d-flex my-4 justify-content-center">
+
+      <li *ngIf="!loadingUser; else loading" class="nav-item d-flex flex-row justify-content-center align-items-center">
+        <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
           <mat-button-toggle class="es-en-button" value="es" checked="{{ hasSpanishLanguage() }}"
-            (click)="useLanguage('es')">es</mat-button-toggle>
+                             (click)="useLanguage('es')" color="primary">es</mat-button-toggle>
           <mat-button-toggle class="es-en-button" value="en" checked="{{ hasEnglishLanguage() }}"
-            (click)="useLanguage('en')">en</mat-button-toggle>
+                             (click)="useLanguage('en')">en</mat-button-toggle>
         </mat-button-toggle-group>
-      </li>
-      <!-- Dropdown -->
-      <li *ngIf="!loadingUser; else loading" class="nav-item">
-        <a [matMenuTriggerFor]="menu" class="nav-link">
-          <div class="profile-button-container">
-            <i class="fas fa-user-circle" style="font-size: x-large"></i>
+
+        <div mdbDropdown>
+          <a  mdbDropdownToggle  class="nav-link d-flex nav-link align-items-center">
+            <i class="fas fa-user-circle text-white mx-1" style="font-size: x-large"></i>
             <div *ngIf="loggedIn; else notLogged">
               <div class="account">{{'NAVBAR.WELCOME' | translate}} {{(user | async).fname}}</div>
             </div>
             <ng-template #notLogged>
-              <div class="account">{{ 'NAVBAR.LOGIN' | translate }}</div>
+              <div class="text-white">{{ 'NAVBAR.LOGIN' | translate }}</div>
             </ng-template>
+          </a>
+
+          <div class="dropdown-menu dropdown-menu-right dropdown-primary">
+            <a class="dropdown-item" *ngIf="loggedIn" (click)="logoutUser()">{{ 'LOGOUT.TITLE' | translate }}</a>
+            <a class="dropdown-item" *ngIf="!loggedIn" [routerLink]="['/login']">{{ 'LOGIN.TITLE' | translate }}</a>
+            <a class="dropdown-item" *ngIf="!loggedIn" [routerLink]="['/register']">{{ 'REGISTER.TITLE' | translate }}</a>
           </div>
-        </a>
+        </div>
       </li>
       <ng-template #loading>
         <div class="h-100">
           <mat-progress-spinner [diameter]="30"
                                 mode="indeterminate"
-                                color="primary"></mat-progress-spinner>
+                                [ngStyle]="{'color':navbarColors.hover}"></mat-progress-spinner>
         </div>
       </ng-template>
     </ul>
+    <!-- Links -->
   </links>
+  <!-- Collapsible content -->
+
 </mdb-navbar>
-
-<mat-menu #institutionalMenu="matMenu" xPosition="before" yPosition="below">
-  <button mat-menu-item [routerLink]="['/team']">{{ 'NAVBAR.TEAM' | translate }}</button>
-  <button mat-menu-item [routerLink]="['/ras']">RAS</button>
-  <button mat-menu-item onclick="window.location.href = 'https://csitba.web.app/'">CS</button>
-  <button mat-menu-item [routerLink]="['/wie']">WIE</button>
-  <button mat-menu-item [routerLink]="['/emb']">EMB</button>
-</mat-menu>
-
-<mat-menu #menu="matMenu" xPosition="before" yPosition="below">
-  <button mat-menu-item *ngIf="loggedIn" (click)="logoutUser()">{{ 'LOGOUT.TITLE' | translate }}</button>
-  <button mat-menu-item *ngIf="!loggedIn" [routerLink]="['/login']">{{ 'LOGIN.TITLE' | translate }}</button>
-  <button mat-menu-item *ngIf="!loggedIn" [routerLink]="['/register']">{{ 'REGISTER.TITLE' | translate }}</button>
-</mat-menu>
+<!--/.Navbar-->
