--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,11 +1,55 @@
-<div class="row" fxLayoutAlign="center center">
-  <div class="margin-logo col-sm">
-    <img src="../../../../assets/image/general-icons/ieee.png" alt="Logo IEEE" width="190vmin">
-  </div>
-  <div class="margin-logo col-sm">
-    <img src="../../../../assets/image/general-icons/ieee-itba.png" alt="Logo IEEE ITBA" width="100vmin">
-  </div>
-  <div class="margin-logo col-sm">
-    <img src="../../../../assets/image/general-icons/itba.png" alt="Logo ITBA" width="170vmin">
-  </div>
-</div>
+<footer class="page-footer font-small pt-4 pb-4">
+
+    <div class="container text-center">
+
+        <div class="row">
+
+            <div class="col-12 col-md-6 mb-3 mb-md-0">
+                <div class="d-flex align-items-center">
+                <img src="../../../../assets/image/general-icons/IEEE-Logo-No-Text-Darkest.png" alt="IEEE Logo" class="footer-logo">
+                <!-- IEEE ITBA Text -->
+                <div class="d-inline-block footer-text text-start ml-3">
+                    <h2 class="text-uppercase mb-0">IEEE<br>ITBA</h2>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3 mb-3 mb-md-0">
+                <div class="text-block">
+                    <h4 class="text-primary font-weight-bold mb-3 text-start">{{ 'FOOTER.ORGANIZATION' | translate }}</h4>
+                    <ul class="list-unstyled text-start">
+                        <li>
+                            <a [routerLink]="['/about-us']" class="text-white">{{ 'FOOTER.ABOUTUS' | translate }}</a>
+                        </li>
+                        <li>
+                            <a [routerLink]="['/sponsors']" class="text-white">{{ 'FOOTER.SPONSORS' | translate }}</a>
+                        </li>
+                        <li>
+                            <a [routerLink]="['/contact']" class="text-white">{{ 'FOOTER.CONTACT' | translate }}</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3 w-responsive">
+                <div class="text-block">
+                    <h4 class="text-primary font-weight-bold mb-3 text-start">{{ 'FOOTER.SOCIAL' | translate }}</h4>
+                    <ul class="list-unstyled text-start">
+                        <li>
+                            <a href="https://www.instagram.com/ieee.itba/" class="text-white">
+                                <i class="fab fa-instagram"></i>
+                                Instagram
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/company/ieee-itba" class="text-white">
+                                <i class="fab fa-linkedin-in"></i>
+                                LinkedIn
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
