--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -16,7 +16,7 @@
 
             <div class="col-12 col-md-3 mb-3 mb-md-0">
                 <div class="text-block">
-                    <h4 class="text-primary font-weight-bold mb-3 text-start">{{ 'FOOTER.ORGANIZATION' | translate }}</h4>
+                    <h4 class="text-white font-weight-bold mb-3 text-start">{{ 'FOOTER.ORGANIZATION' | translate }}</h4>
                     <ul class="list-unstyled text-start">
                         <li>
                             <a [routerLink]="['/about-us']" class="text-white">{{ 'FOOTER.ABOUTUS' | translate }}</a>
@@ -33,7 +33,7 @@
 
             <div class="col-12 col-md-3 w-responsive">
                 <div class="text-block">
-                    <h4 class="text-primary font-weight-bold mb-3 text-start">{{ 'FOOTER.SOCIAL' | translate }}</h4>
+                    <h4 class="text-white font-weight-bold mb-3 text-start">{{ 'FOOTER.SOCIAL' | translate }}</h4>
                     <ul class="list-unstyled text-start">
                         <li>
                             <a href="https://www.instagram.com/ieee.itba/" class="text-white">
