--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <header>
   <app-navbar [bgColor]="getNavbarColor() | async"></app-navbar>
 </header>
-<router-outlet></router-outlet>
+<div class="router-content">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
 
 
