fix: add extra padding for pages and make footer depend on navbar color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <div class="router-content">
     <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer>
+<app-footer [color]="(getNavbarColor() | async).background"></app-footer>
 
 
 
