--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,4 @@
-<footer class="page-footer font-small pt-4 pb-4">
-
+<footer class="page-footer font-small pt-4 pb-4" style="background-color: {{color}}">
     <div class="container text-center">
 
         <div class="row">
